test/fail/basic_syntax/string_subscript_assign.lly
#[
SyntaxError: Subscript assign not allowed on type string.
    from string_subscript_assign.lly:8
]#

var v = "abc"

v[0] = "def"
